# basic-python

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml  {% if cookiecutter.create_dockerfile %}Dockerfile{% endif %}  {% if cookiecutter.create_readme %}README.md{% endif %}  {% if cookiecutter.use_precommit %}.pre-commit-config.yaml{% endif %}  {%- if cookiecutter.create_readme %}README.md{%- endif %}
