[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"
{% if not cookiecutter.package_mode %}package-mode = false{% endif %}

[tool.poetry.dependencies]
python = "{{ cookiecutter.py_version }}"

[tool.poetry.group.dev.dependencies]
{% if cookiecutter.use_ruff %}ruff = "*" {% endif %}
{% if cookiecutter.use_precommit %}pre-commit = "*"{% endif %}


{% if cookiecutter.use_ruff %}
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "D", "UP"]
extend-fixable = ["I"]
ignore = ["D104", "D100", "D105", "B008", "D107", "D415"]
{% endif %}

{% if cookiecutter.package_mode %}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
{% endif %}
